2009-08-19  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp: Accommodate the new Java/Lisp stack frame
	abstraction in the upcoming abcl-0.16. (based on code from Tobias
	Rittweiler).
	
2009-08-18  Mark Evenson  <evenson@panix.com>

	Add multithreading code for abcl-0.16. (Tobias Rittweiler)

	* swank-abcl.lisp: A multithread implementation taking advantage
	of the new synchronization primitives in abcl-0.16.  

	Restore working with abcl-0.15.

	* swank-abcl.lisp: Remove the warm initialization code for
	SWANK:COMPILER-CONDITION, as it is no longer needed for the
	current release of ABCL. 

2009-08-16  StanisBaw Halik <sthalik@test123.ltd.pl>

	* swank.lisp (init-global-stream-redirection): Continue even if
	streams are already redirected.  Useful for restarting Swank with
	M-x slime when a REPL is already present.  Will most likeley
	mess up the input stream in multi threaded setups, tho.

2009-08-15  Helmut Eller  <heller@common-lisp.net>

	XEmacs fixes.

	* slime.el (slime-editing-keys): Use (kbd "C-M-.") because XEmacs
	translates [?\C-\M-.] to C-M-n.
	(next-single-char-property-change)
	(previous-single-char-property-change): Use
	next-single-property-change because next-char-property-change gets
	embarrisingly slow in XEmacs in font-locked buffers.
	It never felt that slow in Emacs 20 though.

2009-08-15  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp (definition-name): Special case methods.

	* slime.el (slime-choose-overlay-region): Don't return zero length
	regions for :eof.
	(slime-show-buffer-position): The second argument to
	display-buffer means something completely different in
	XEmacs. Don't use it.
	(slime-severity-face): Handle :redefinition.
	(slime-temporarily-highlight-note): Use a timer instead of the
	post-command-hook.

2009-08-13  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-auto-select-connection, slime-auto-connect):
	Turn them into customizable variables.

2009-08-11  Tobias C. Rittweiler  <tcr@freebits.de>
