@@ -95,9 +95,30 @@ A prefix argument disables this behaviour."
 (defun inferior-slime-switch-to-repl-buffer ()
   (switch-to-buffer (process-buffer (slime-inferior-process))))
 
+(defun inferior-slime-show-transcript (string)
+  (remove-hook 'comint-output-filter-functions
+	       'inferior-slime-show-transcript t)
+  (display-buffer (process-buffer (slime-inferior-process)) t))
+
+(defun inferior-slime-start-transcript ()
+  (with-current-buffer (process-buffer (slime-inferior-process))
+    (add-hook 'comint-output-filter-functions 
+	      'inferior-slime-show-transcript
+	      nil t)))
+
+(defun inferior-slime-stop-transcript ()
+  (run-with-timer 0.2 nil 
+		  (lambda (buffer) 
+		    (with-current-buffer buffer
+		      (remove-hook 'comint-output-filter-functions
+				   'inferior-slime-show-transcript t)))
+		  (current-buffer)))
+
 (defun inferior-slime-init ()
   (add-hook 'slime-inferior-process-start-hook 'inferior-slime-hook-function)
   (add-hook 'slime-change-directory-hooks 'inferior-slime-change-directory)
+  (add-hook 'slime-transcript-start-hook 'inferior-slime-start-transcript)
+  (add-hook 'slime-transcript-stop-hook 'inferior-slime-stop-transcript)
   (def-slime-selector-method ?r
     "SLIME Read-Eval-Print-Loop."
     (inferior-slime-switch-to-repl-buffer)))
