@@ -1,3 +1,10 @@
+2009-08-21  Helmut Eller  <heller@common-lisp.net>
+
+	* inferior-slime.el (inferior-slime-show-transcript)
+	(inferior-slime-stop-transcript, inferior-slime-start-transcript):
+	New functions.
+	(inferior-slime-init): Install transcript hooks.
+
 2009-08-15  Helmut Eller  <heller@common-lisp.net>
 
 	* slime-typeout-frame.el (slime-typeout-message): Don't call
